--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,12 @@ padding-top: 45px;
 #formActiv {
    visibility: hidden;
 }
+
+
+.fa-instagram{
+  color:#517fa4;
+}
+
+.fa-facebook{
+  color:#3b5998;
+}
