--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,37 @@ header {
   padding: 80px 0 100px;
 }
 
-section {
-  padding: 150px 0;
+
+.btnPlus , .btndel {
+  margin-top: 22px;
+  margin-bottom: 11px;
 }
 
-.logo {
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  margin-right: 15px;
+.createArticle{
+  padding-top: 45px;
+  }
+
+.crud{
+  display: grid;
 }
 
-.big-banner{
-  background-image: url('../img/rec.jpg');
+  
+
+#formActiv {
+  visibility: hidden;
+}
+
+
+.fa-instagram{
+ color:#e4405f;
+}
+
+.fa-facebook{
+ color:#3b5998;
+}
+
+.fa-map-marker-alt{
+ color:#15aabf;
 }
 
 .fronttext{
@@ -25,43 +43,39 @@ section {
 }
 
 .info{
-    margin-right: 8px;
-    font-size: 22px;
+  margin-right: 8px;
+  font-size: 22px;
 
 }
 
-.createArticle{
-padding-top: 45px;
-}
-
-.btnPlus , .btndel {
-  margin-top: 22px;
-  margin-bottom: 11px;
-}
-
-.crud{
-  display: grid;
-}
-
-#formActiv {
-   visibility: hidden;
+.slide{
+  margin-right: 21px;
 }
 
 
-.fa-instagram{
-  color:#e4405f;
+.logo {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
 }
 
-.fa-facebook{
-  color:#3b5998;
+/*.big-banner{
+  background-image: url('../img/rec.jpg');
+}*/
+
+.navbar{
+  color:whitesmoke;
 }
-
-.fa-map-marker-alt{
-  color:#15aabf;
-}
-
-
 
 .mkservices:hover .card-img-top{
   opacity: 0.2;
+}
+
+.partenaires {
+  display: flex;
+}
+
+section {
+  padding: 150px 0;
 }
