fixed menu and service

--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,16 @@ header {
   padding: 80px 0 100px;
 }
 
+a {
+  color: white;
+}
 
 .btnPlus , .btndel {
   margin-top: 22px;
   margin-bottom: 11px;
+}
+.contact a p i {
+margin-left: 1em;
 }
 
 .createArticle{
