--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,14 @@ margin-left: 1em;
 
 .mkservices:hover .card-img-top{
   opacity: 0.2;
+
 }
+.image{
+  width : 50px;
+  height: 50px;
+  margin: 50px;
+}
+
 
 .partenaires {
   display: flex;
