--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,17 @@ margin-left: 1em;
   font-size: 90px;
 }
 
+.header{
+  widows: 100%;
+  height : 350px;
+  background-color: #f4f4f4;
+  background: url('../img/logo_site.jpg') no-repeat center;
+  text-align: center;
+}
+.header p {
+  padding-top: 9%;
+}
+
 .info{
   margin-right: 8px;
   font-size: 22px;
@@ -56,9 +67,11 @@ margin-left: 1em;
 
 .services  {
   width: 100%;
-  height: 180px;
   margin-top: 1em;
   margin-bottom: 1em;
+  color: white;
+  opacity: 0.8;
+  background: url('../img/rec.jpg');
 }
 .services h5 {
    text-align: center;
@@ -128,11 +141,7 @@ div.card-body{
   opacity: 1;
 }
 
-.services{
-  background:rgba(56,56,56, 0.8);
-  color: white;
-  opacity: 0.8;
-}
+
 h5 {
   margin-bottom: 3%;
 }
