--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,10 @@ margin-left: 1em;
   padding-top: 9%;
 }
 
+#mainNav {
+  font-family: fantasy;
+}
+
 .info{
   margin-right: 8px;
   font-size: 22px;
@@ -76,6 +80,10 @@ margin-left: 1em;
 .services h5 {
    text-align: center;
 }
+.services .card {
+
+}
+
 .slide{
   margin-right: 21px;
 }
@@ -87,10 +95,6 @@ margin-left: 1em;
   height: 40px;
   margin-right: 15px;
 }
-
-/*.big-banner{
-  background-image: url('../img/rec.jpg');
-}*/
 
 .navbar .navbar-expand-lg {
   color:whitesmoke;
@@ -144,4 +148,17 @@ div.card-body{
 
 h5 {
   margin-bottom: 3%;
+}
+
+.transition {
+    transition-property: opacity, background;
+    transition-duration: 0.5s;
+    transition-timing-function: linear;
+    transition-delay: 1s;
+}
+
+.transition:hover {
+  opacity: 1;
+  background: grey;
+  border: 1px solid white;
 }
