--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ a {
   color: white;
 }
 
+hr {
+  border-bottom: 1px solid rgb(68, 67, 70);
+}
 .body {
   overflow-x: hidden;
 }
@@ -94,7 +97,7 @@ margin-left: 1em;
   margin-bottom: 1em;
   color: white;
   opacity: 0.8;
-  background: url('../img/rec.jpg');
+ /* background: url('../img/rec.jpg'); */
 }
 .services h5 {
    text-align: center;
@@ -142,21 +145,22 @@ section {
 }
 
 .card{
-  background: none;
-  background-color: rgb(52,58,64);
-  opacity: 0.7;
+ /* background: none;
+  background-color: rgb(52,58,64);*/
+  /*opacity: 0.7;*/
+  color:#0A090C;
 }
 
 .card-title{
   font-family: "Hind",sans-serif, monospace;
-  color:white; 
   opacity: 1;
   margin: 10px;
+  color: #808080;
 }
 
 .card-text{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: rgba(255,255,255, 0.9);
+  font-family: proxima-nova,Verdana, Geneva, Tahoma, sans-serif;
+  /*color: rgba(255,255,255, 0.9);*/
   opacity: 1;
 }
 
@@ -172,6 +176,7 @@ section {
 
 h5 {
   margin-bottom: 3%;
+  border-top-color: rgb(204, 204, 204);
 }
 
 .transition {
